--- a/visualization/notebook.ipynb
+++ b/visualization/notebook.ipynb
@@ -724,6 +724,7 @@
     "\n",
     "selected_eos = ['ISCT', 'ISCT2']\n",
     "selected_m = [30.]\n",
+    "selected_g = [3., 30., 300., 3000.]\n",
     "\n",
     "for m in m_array:\n",
     "    for label in labels:\n",
