fix naming in last meson plottings

--- a/visualization/notebook.ipynb
+++ b/visualization/notebook.ipynb
@@ -823,7 +823,7 @@
     "        plt.legend(frameon=False, title=f'$m = {m}$, $\\\\mu = {mu}$')\n",
     "\n",
     "        plot_folder = get_plot_folder('diff_g')\n",
-    "        plot_file = f'cs_of_T_{particle_type}_{label}_R_{R}_g_{g}_mu_{mu}_.pdf'\n",
+    "        plot_file = f'cs_of_T_{particle_type}_{label}_R_{R}_mu_{mu}_.pdf'\n",
     "        savepath = get_savepath()\n",
     "        if saving:\n",
     "            plt.savefig(savepath)\n",
